<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BibBox</string>
    <string name="action_settings">Réglage</string>
    <string name="action_home">Accueil</string>
    <string name="action_new_reserv">Nouvelle Réservation</string>
    <string name="action_my_reservs">Mes Réservations</string>
    <string name="action_login">Connexion</string>
    <string name="action_logout">Déconnexion</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_login">Identifiant</string>
    <string name="edit_password">Mot de passe</string>
    <string name="btn_login">Se connecter</string>
    <string name="search_monoAllocable">Recherchez un box</string>
    <string name="search_mono_nbPerson">Nombre de personnes</string>
    <string name="search_mono_equips">Équipements</string>
    <string name="search_mono_location">Lieu</string>
    <string name="search_mono_date">Date</string>
    <string name="search_mono_beginTime">Horaire de début</string>
    <string name="search_mono_endTime">Horaire de fin</string>
    <string name="search">Rechercher</string>
    <string name="label_location">Bibliothèque</string>
    <string name="label_num_mono">N° de box</string>
    <string name="label_name_mono">Nom de box</string>
    <string name="label_nb_place">Nombre de places assises</string>
    <string name="label_equips">Équipements</string>
    <string name="label_descript">Description</string>
    <string name="reserve">Réserver</string>
    <string name="message_select_multi_allocables">Sélection de matériaux</string>
    <string name="no_multi_allocable">Pas de matériel</string>
    <string name="confirm">Confirmation</string>
    <string name="message_summary">Récapitulatif de votre réservation</string>
    <string name="validate_reserv">Valider la réservation</string>
    <string name="cancel">Annuler</string>
    <string name="launch_search_teacher">Aucun résultat. Cliquer ici pour prendre un box réservé par des étiduants</string>
    <string name="home_message">Réservez votre box dès maintenant</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_login">Connexion</string>
    <string name="title_newreserv">Nouvelle réservation</string>
    <string name="title_activity_mono_allocable">Résultats de recherche</string>
    <string name="title_activity_base"></string>
    <string name="title_myreserv_list">Mes réservations</string>
    <string name="title_myreserv_detail">Mes réservations</string>
    <string name="title_activity_multi_allocable">Matériaux</string>
    <string name="title_activity_summary">Récapitulatif</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mono_allocable_teacher">MonoAllocableTeacherActivity</string>


</resources>
