<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MultiAllocableActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/message_select_multi_allocables"/>
    
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <ListView
        android:id="@+id/multi_allocable_liste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_no_multi_allocable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_multi_allocable" 
            android:onClick="openSummaryWithoutMultiAllocables"/>
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" 
            android:onClick="openSummary"/>
    </LinearLayout>

</LinearLayout>